--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="secondaryBackground">#214966</color>
+    <color name="primaryTextColor">#214966</color>
+    <color name="secondaryTextColor">#9EB0BC</color>
+    <color name="backgroundComponentColor">#F2F4F6</color>
+
+    <color name="headerTextColor">#FFF</color>
+
+    <color name="home_navigation_background">#214966</color>
+    <color name="home_navigation_item">#FFF</color>
+
+    <color name="linkTextColor">@color/primaryTextColor</color>
+    <color name="linkTextColorClicked">#E49C0C</color>
+    <color name="linkTextColorDisabled">#666</color>
 </resources>
